Test/dafny0/IMaps2.dfy.expect
IMaps2.dfy(9,3): Error: a set comprehension must produce a finite set, but Dafny's heuristics can't figure out how to produce a bounded set of values for 's'
IMaps2.dfy(17,3): Error: a set comprehension must produce a finite set, but Dafny's heuristics can't figure out how to produce a bounded set of values for 's'
2 resolution/type errors detected in IMaps2.dfy
